<?xml version="1.0" encoding="UTF-8" ?>
<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             x:Class="BeeMemoryBank.Mobile.Pages.TreePage"
             x:Name="PageRoot"
             Title="Tree"
             BackgroundColor="{StaticResource BackgroundColor}">

    <ContentPage.ToolbarItems>
        <ToolbarItem IconImageSource="icon_new_article.svg" AutomationId="NewArticleButton" Clicked="OnNewArticleClicked" Order="Primary" />
        <ToolbarItem IconImageSource="icon_new_folder.svg" AutomationId="NewFolderButton" Clicked="OnNewFolderClicked" Order="Primary" />
        <ToolbarItem x:Name="ExpandToggle" IconImageSource="icon_expand.svg" AutomationId="ExpandToggle" Clicked="OnToggleExpandClicked" Order="Primary" />
    </ContentPage.ToolbarItems>

    <Grid RowDefinitions="Auto,*">

        <Label Grid.Row="0" x:Name="BreadcrumbLabel"
               Text="/"
               FontSize="13"
               TextColor="{StaticResource SecondaryTextColor}"
               LineBreakMode="HeadTruncation"
               Padding="12,8,12,4" />

        <ActivityIndicator x:Name="LoadingIndicator"
                           Grid.Row="0" Grid.RowSpan="2"
                           IsRunning="False"
                           IsVisible="False"
                           Color="{StaticResource PrimaryColor}"
                           VerticalOptions="Center"
                           HorizontalOptions="Center"
                           ZIndex="10" />

        <RefreshView Grid.Row="1" x:Name="RefreshView" Refreshing="OnRefreshing">
            <CollectionView x:Name="TreeList"
                            AutomationId="TreeList"
                            SelectionMode="None"
                            EmptyView="No items found."
                            Margin="8,8,8,0">
                <CollectionView.ItemTemplate>
                    <DataTemplate>
                        <Frame Style="{StaticResource CardFrame}" Margin="0,4">
                            <Frame.GestureRecognizers>
                                <TapGestureRecognizer Tapped="OnItemTapped" />
                                <TapGestureRecognizer Tapped="OnItemLongPressed" NumberOfTapsRequired="2" />
                            </Frame.GestureRecognizers>
                            <Grid ColumnDefinitions="Auto,Auto,*,Auto" ColumnSpacing="10">
                                <Image Grid.Column="0"
                                       Source="{Binding IconSource}"
                                       WidthRequest="20" HeightRequest="20"
                                       VerticalOptions="Center" />
                                <Label Grid.Column="1"
                                       Text="🔒"
                                       FontSize="13"
                                       IsVisible="{Binding ShowLock}"
                                       VerticalOptions="Center" />
                                <Label Grid.Column="2"
                                       Text="{Binding DisplayName}"
                                       FontSize="15"
                                       LineBreakMode="{Binding ItemsLineBreakMode, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
                                       MaxLines="{Binding ItemsMaxLines, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
                                       VerticalOptions="Center">
                                    <Label.Triggers>
                                        <DataTrigger TargetType="Label" Binding="{Binding IsFolder}" Value="True">
                                            <Setter Property="FontAttributes" Value="Bold" />
                                        </DataTrigger>
                                    </Label.Triggers>
                                </Label>
                                <Label Grid.Column="3"
                                       Text="{Binding RightText}"
                                       FontSize="15"
                                       TextColor="{StaticResource SecondaryTextColor}"
                                       VerticalOptions="Center" />
                            </Grid>
                        </Frame>
                    </DataTemplate>
                </CollectionView.ItemTemplate>
            </CollectionView>
        </RefreshView>

        <Grid x:Name="NavBusyOverlay"
              Grid.Row="0" Grid.RowSpan="2"
              IsVisible="False"
              BackgroundColor="#99000000"
              ZIndex="20">
            <ActivityIndicator IsRunning="True"
                               Color="{StaticResource PrimaryColor}"
                               WidthRequest="48" HeightRequest="48"
                               VerticalOptions="Center" HorizontalOptions="Center" />
        </Grid>

    </Grid>

</ContentPage>
