...

            <Label x:Name="MessageLabel"
                   FontSize="14"
                   TextColor="{StaticResource SecondaryTextColor}" />

            <Entry x:Name="InputEntry"
                   AutomationId="PopupInputEntry"
                   FontSize="16"
                   TextColor="{StaticResource TextColor}"
                   PlaceholderColor="{StaticResource SecondaryTextColor}"
                   BackgroundColor="{StaticResource InputBackgroundColor}"
                   IsSpellCheckEnabled="False"
                   IsTextPredictionEnabled="False"
...
