appId: com.beememorybank.mobile
---
- runFlow: _go_home.yaml
- evalScript: ${output.title = 'a' + Date.now()}
- tapOn:
    text: "Open navigation drawer"
- extendedWaitUntil:
    visible:
      text: "Tree"
    timeout: 3000
- tapOn:
    text: "Tree"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TreeList"
    timeout: 10000
- tapOn:
    text: "Books"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/FolderList"
    timeout: 10000
- tapOn:
    text: "NewArticleButton"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TitleEntry"
    timeout: 10000
- tapOn:
    id: "com.beememorybank.mobile:id/TitleEntry"
- inputText: ${output.title}
- hideKeyboard
- tapOn:
    text: "SaveToolbarButton"
- extendedWaitUntil:
    visible:
      text: ${output.title}
    timeout: 30000
- takeScreenshot: article_in_folder
